src/test/ui/maybe-bounds.stderr
error: `?Trait` is not permitted in supertraits
  --> $DIR/maybe-bounds.rs:1:11
   |
LL | trait Tr: ?Sized {}
   |           ^^^^^^
   |
   = note: traits are `?Sized` by default

error: `?Trait` is not permitted in trait object types
  --> $DIR/maybe-bounds.rs:4:20
   |
LL | type A1 = dyn Tr + (?Sized);
   |                    ^^^^^^^^

error: `?Trait` is not permitted in trait object types
  --> $DIR/maybe-bounds.rs:6:28
   |
LL | type A2 = dyn for<'a> Tr + (?Sized);
   |                            ^^^^^^^^

error: aborting due to 3 previous errors

